code review cleanup
revert